# claude-config-editor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLI_USAGE.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  NEXT-STEPS.md  PRODUCTION_UPGRADE_PLAN.md  QUICKSTART.md  README.md  UNUSED_FILES_ANALYSIS.md  UNUSED_FILES_QUICK_REFERENCE.md  WINDOWS_SCAN_README.md  alembic.ini  change_report.json  claude-config-export.yaml  claude_operator.md  comprehensive_report.html  create_snapshot.py  docker-compose.yml  generate_html_report.py  index.html  inspect_db.py  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  run_api.py  runin.bat  scan_results.json  server.py  session-end.bat  session-start.bat  setup-dev-env.bat  snapshot-1-export.json  snapshot_report.json  snapshots.html  start_api.bat  (+7 more)
.claude/: claude.md  settings.local.json
alembic/: env.py
alembic/versions/: e6f9f2446064_initial_migration_create_all_tables.py
config/: development.yaml  logging.yaml  paths.yaml  production.yaml  testing.yaml
doc/: API-TEST-RESULTS.md  API-TESTING-GUIDE.md  DOCUMENTATION-COMPLETE.md  DOCUMENTATION-INDEX.md  PHASE-3-COMPLETE.md  PHASE-4-PROGRESS-UPDATE.md  PLANNING-DOCUMENT-UPDATE.md  PLANNING-UPDATE-SUMMARY.md  QUICK-START-GUIDE.md  REVIEW-AND-TEST-PROCESS.md  configuration-guide.md  design-version-control-system.md  documentation-config-switcher-feature.md  phase-3-core-refactoring-plan.md  phase-3-progress-summary.md  phase-3-task-1-summary.md  phase-3-task-4-summary.md  phase-3-task-5-summary.md  phase-4-progress-summary.md  phase-4-task-1-2-summary.md  phase-5-progress-summary.md  planning-production-upgrade-architecture.md  scanner-comparison-analysis.md  task-3.4-completion-summary.md
doc/archived/: session-summary-windows-path-implementation.md
docs/: API-REFERENCE-MCP.md  CONTAINER-DEVELOPMENT.md  DOCUMENTATION-INDEX.md  PROJECT-HISTORY.md  README.md  TASK_3.4_COMPLETE.md  documentation-path-handling-concepts.md  phase-5-task-1-summary.md  planning-production-upgrade-architecture.md  scanner-migration-guide.md  security-sanitization-design.md  task-2-serve-command-summary.md  task-9-boundaries-and-security-summary.md  task-9-mcp-endpoints-detailed-scope.md
docs/archived/: CLI-TESTING-SUMMARY.md  CONSOLIDATED-DOCUMENTATION.md  CONSOLIDATION-COMPLETE.md  DOCUMENTATION-CONSOLIDATION-SUMMARY.md  PHASE_5_TASK_2_COMPLETE.md  QUICK-START-GUIDE.md  README-DOCS.md  marketing-reddit-launch-posts.md  phase-3-task-3-summary.md  phase-4-cli-enhancement-plan.md  phase-5-api-implementation-plan.md  phase-5-quick-reference.md  phase-5-review.md  session-summary-system-paths-gui.md  task-10-claude-config-endpoints-scope.md
scripts/: start_api.bat
src/api/: app.py  dependencies.py  exceptions.py  middleware.py
src/cli/: __init__.py  __main__.py  commands.py  commands_legacy.py  formatters.py  progress.py  utils.py
src/core/: config.py  config_loader.py  database.py  entities.py  models.py  path_loader.py  scanner.py
static/: index.html
tests/: conftest.py  manual_test_mcp_endpoints.py  manual_test_path_endpoints.py  test_database.py  test_database_initialization.py  test_entities.py  test_models.py  test_reports.py  test_sanitizer.py  test_schemas.py
(+48 files in other folders)
